--- a/API/appsettings.Development.json
+++ b/API/appsettings.Development.json
@@ -6,7 +6,7 @@
   "Logging": {
     "LogLevel": {
       "Default": "Information",
-      "Microsoft.AspNetCore": "Information"
+      "Microsoft.AspNetCore": "Warning"
     }
   }
 }
